adguard-home/adguard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-deployment
  namespace: adguard
  labels:
    app: adguard-home
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      serviceAccountName: adguard-home-sa
      securityContext:
        fsGroup: 1000
      containers:
      - name: adguard-home
        image: adguard/adguardhome:v0.107.78
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 3000
          name: http-initial
          protocol: TCP
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
        - name: adguard-conf-dir
          mountPath: /opt/adguardhome/conf
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-pvc
      - name: adguard-conf-dir
        emptyDir: {}
      - name: adguard-config-template
        configMap:
          name: adguard-config
