adguard-home/adguard-home-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguardhome
  template:
    metadata:
      labels:
        app: adguardhome
    spec:
      containers:
      - name: adguardhome
        image: adguard/adguardhome:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 53
          protocol: UDP
