adguard-home/adguard-home-service.yml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-service
spec:
  selector:
    app: adguardhome
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: dns
    protocol: UDP
    port: 53
    targetPort: 53
